--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"css-loader": "^6.7.1",
 		"eslint": "^8.17.0",
 		"eslint-config-airbnb-base": "^15.0.0",
+		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-import": "^2.26.0",
 		"eslint-plugin-jest": "^26.5.3",
 		"html-webpack-plugin": "^5.5.0",
