--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 		"webpack-dev-server": "^4.9.2"
 	},
 	"dependencies": {
-		"normalize.css": "^8.0.1"
+		"normalize.css": "^8.0.1",
+		"pubsub-js": "^1.9.4"
 	}
 }
